fix(style): ensure overflow-indicator is hidden in dialog-exportimage

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -647,7 +647,7 @@ background: linear-gradient(unquote($direction), $stops);
 
     &::before {
         content: '';
-        // display: block;
+        display: block;
         position: sticky;
         z-index: 1;
         opacity: 0;
